--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
 ]
 
 [tool.poetry]
-packages = [{include = "assistant", from = "src"}]
+packages = [{include = "assistant", from = "assistant/src"}]
 
 
 [build-system]
